# onecode

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  DESIGN.md  MANIFEST.in  Makefile  README.md  README_TRAINING_ASSETS.md  pyproject.toml
agent交易所/: .gitignore  README.md  pyproject.toml
agent交易所/src/a2a_exchange/: __init__.py  __main__.py  app.py  credit.py  discovery.py  (+6 more)
agent交易所/tests/: test_exchange.py
one code/: .gitignore  LICENSE  README.md  README_TRAINING_ASSETS.md  SECURITY.md  pyproject.toml  requirements-tui.txt
one code/docs/: ONECODE_AGENT_SHELL_PHASE_CLOSURE_REPORT.md  ONECODE_SECOND_ORDER_ARCHITECTURE_GUARDS_CLOSURE_REPORT.md  ONECODE_SHELL_CONTROL_PLANE_CLOSURE_REPORT.md  ONECODE_V0_2_MATURITY_HARDENING_CLOSURE_CHECKLIST.md  ONECODE_V0_2_SIX_DIRECTION_REVIEW_CORRECTION.md  PHASE1_CLOSURE_REPORT.md  V0_6_FINAL_CLOSURE_REPORT.md  V0_6_MATH_CLOSURE_REPORT.md
one code/release/: BENCHMARK_RESULTS.md  OPEN_SOURCE_CHECKLIST.md  PUBLIC_README.md  README.md  RELEASE_NOTES.md  TERMINOLOGY.md  UPDATE_2026_06_05.md
one code/scripts/: demo_v07.sh  verify-core.sh  verify.sh
one code/tests/: test_action_intent.py  test_benchmark.py  test_checkpoint.py  test_doctor_cli.py  test_execution_engine.py  test_gateway_engine.py  test_hexagram.py  test_iching_kernel.py  test_iching_kernel_integration.py  test_inspect_cli.py  test_inspection.py  test_list_runs_cli.py  test_logos_gate.py  test_model_loop.py  test_packaging.py  test_patching.py  test_path_guard.py  test_permission_matrix.py  test_project_context.py  test_readme.py  test_recovery_policy.py  test_resumption.py  test_rule_closure.py  test_run_plan_cli.py  test_runner_cli.py  test_runtime_config.py  test_sandbox.py  test_self_audit_cli.py  test_shell_projection.py  test_source_hygiene.py  test_task_resume.py  test_tui_layout.py  test_tui_model_closure.py  test_verifier.py  test_verifier_policy_init_cli.py  test_verify_script.py  test_wal.py  test_web_api.py
(+481 files in other folders)
