[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "onecode"
version = "0.1.0"
description = "Local-first agent kernel with guarded model plan execution"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = []

[project.optional-dependencies]
tui = [
    "textual==8.2.7",
]

[project.scripts]
onecode = "onecode.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
