[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-exchange"
version = "0.2.0"
description = "Trusted Agent-to-Agent capability exchange with verification, quote-locked checkout, and mock escrow"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
]

[project.scripts]
a2a-exchange = "a2a_exchange.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
