[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "onecode"
version = "0.1.0"
description = "Local-first agent kernel with guarded model plan execution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80",
]

[project.scripts]
onecode = "onecode.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
