[project]
name = "secure-b2b-ledger"
version = "0.1.0"
description = "Adversarial B2B ledger fixture for OneWord AgentOS guard and sandbox benchmarks."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "httpx==0.27.0",
  "pyjwt==1.7.1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
